Refactoring OpeningHoursRepositoryTest for method retrieveRule() to improve and fix code.